2006-04-03  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_imapd.c, check_dbmail_message.c, dbmail-message.c, 
	  dbmail-message.h, main.c:
	initialize the internal_date during insertion by scanning the From_
	line if possible

2006-04-01  Paul J Stevens <paul@nfg.nl>

	* sql/mysql/create_tables.mysql, sql/mysql/migrate_from_2.0_to_2.1.mysql:
	cleanup mysql scripts
	* debian/control, debian/dbmail.prerm, debian/rules:
	fix some debian bugs
	* check_dbmail_mailbox.c, dbmail-mailbox.c, dbmail-message.c, 
	  dbmail-message.h, debian/control, mime.c, misc.c, modules/authsql.c, 
	  modules/sortsieve.c, serverchild.c:
	fix compiler warnings
	* Makefile.am, check_dbmail_imapd.c, check_dbmail_message.c, 
	  dbmail-message.c, dbmail-message.h, dbmail.h.in, debian/rules, 
	  main.c, mime.c, mime.h:
	removed mime.[ch]

2006-03-31  Paul J Stevens <paul@nfg.nl>

	* db.c, modules/authsql.c:
	added some missing db_free_result calls (kaname) (closes: #315)
	* INSTALL, sql/mysql/add_auto_replies_fields.mysql, 
	  sql/mysql/add_header_tables.mysql, sql/mysql/add_replycache.mysql, 
	  sql/mysql/add_sieve_tables.mysql, sql/mysql/add_usermap.mysql, 
	  sql/mysql/create_tables.mysql, sql/mysql/create_tables_innoDB.mysql, 
	  sql/mysql/migrate_from_1.x_to_2.0.mysql, 
	  sql/mysql/migrate_from_1.x_to_2.0_innodb.mysql, 
	  sql/mysql/migrate_from_2.0_to_2.1.mysql:
	update mysql sql scripts

2006-03-27  Paul J Stevens <paul@nfg.nl>

	* ChangeLog, check_dbmail_mailbox.c, db.c, dbmail-imapsession.c, 
	  debian/changelog, dm_imaputil.c, imapcommands.c, 
	  test-scripts/testimap.py:
	start new refactoring round of _ic_fetch and do some misc cleanups
	* README:
	update
	* dbmail-mailbox.c, dbmail-mailbox.h:
	make dbmail_mailbox_get_set more generic
	* debian/changelog, debian/control:
	debian package update
	* check_dbmail_mailbox.c, imap4.h:
	refactoring _ic_fetch

2006-03-25  Paul J Stevens <paul@nfg.nl>

	* misc.c, check_dbmail_message.c:
	decode and encode subject dm_base_subject